<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uuids"
        android:layout_marginTop="5dp"
        android:textColor="#111"
        android:layout_marginLeft="10dp"
        />
<RadioButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/nomalm"
    android:id="@+id/rad1"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="10dp"
    android:textColor="#111"
    />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt16m"
        android:id="@+id/rad2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textColor="#111"
        />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spmod"
        android:id="@+id/rad3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textColor="#111"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serviceUUId"
        android:textColor="#000"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setserviceuuid"
        android:textColor="#111"
        android:textSize="14sp"
        android:digits="0123456789ABCDEF-abcdef"
        android:maxLength="36"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotifyUUID"
            android:textColor="#000"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setnotifyuuid"
            android:textColor="#111"
            android:textSize="14sp"
            android:digits="0123456789ABCDEF-abcdef"
            android:maxLength="36"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WriteUID"
            android:textColor="#000"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setwriteuuid"
            android:textColor="#111"
            android:textSize="14sp"
            android:digits="0123456789ABCDEF-abcdef"
            android:maxLength="36"
            />
    </LinearLayout>

</LinearLayout>